--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.password=hlprd
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 #spring.datasource.platform=oracle
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-#spring.datasource.username=vd_dev
-#spring.datasource.password=vd_dev
+#spring.datasource.url=jdbc:oracle:thin:@192.168.22.9:1521:ORCL
+#spring.datasource.username=hlprd
+#spring.datasource.password=1
 #spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 
