--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,13 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.9</version>
         </dependency>
+        
+        <!-- io流 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
 
         <!-- 汉字转换拼音 -->
         <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
