--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.platform=oracle
 spring.datasource.url=jdbc:oracle:thin:@192.168.1.160:1521:ORCL
 #spring.datasource.username=hlprd
 #spring.datasource.password=hlprd
-spring.datasource.username=HLTEST
-spring.datasource.password=hltest
+spring.datasource.username=HLPRD1
+spring.datasource.password=hlprd1
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 #hl-official
