--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 
 #hl-test-160
-spring.datasource.platform=oracle
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.160:1521:ORCL
-#spring.datasource.username=hlprd
-#spring.datasource.password=hlprd
-spring.datasource.username=HLPRD1
-spring.datasource.password=hlprd1
-spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+#spring.datasource.platform=oracle
+#spring.datasource.url=jdbc:oracle:thin:@192.168.1.160:1521:ORCL
+##spring.datasource.username=hlprd
+##spring.datasource.password=hlprd
+#spring.datasource.username=HLPRD1
+#spring.datasource.password=hlprd1
+#spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 #hl-official
-#spring.datasource.platform=oracle
-#spring.datasource.url=jdbc:oracle:thin:@192.168.22.9:1521:MES
+spring.datasource.platform=oracle
+spring.datasource.url=jdbc:oracle:thin:@192.168.22.9:1521:MES
 #spring.datasource.username=HLTEST
 #spring.datasource.password=hltest
-#spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=HLPRDPL
+spring.datasource.password=hlprdpl
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 
 spring.datasource.initialize=false
